[package]
name = "ringbuf"
version = "0.2.1"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Lock-free SPSC FIFO ring buffer with direct access to inner data"
documentation = "https://docs.rs/ringbuf"
homepage = "https://github.com/nthend/ringbuf"
repository = "https://github.com/nthend/ringbuf.git"
readme = "README.md"
keywords = ["lock-free", "spsc", "ring-buffer", "rb", "fifo"]
categories = ["concurrency", "data-structures"]
license = "MIT/Apache-2.0"

[features]
default = []
benchmark = []

# [patch.'https://github.com/apache/teaclave-sgx-sdk.git']
# sgx_tstd = { path = "../rust-sgx-sdk/sgx_tstd" }

[dependencies]
sgx_tstd = { path = "../../../sgx_tstd", features = ["backtrace"] }
